Remove quilt/refafctor stuff